--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.5",
+    "@types/geojson": "^7946.0.14",
+    "@types/leaflet": "^1.9.12",
     "@visx/pattern": "^3.0.0",
     "apexcharts": "^3.37.3",
     "axios": "^1.3.4",
@@ -40,6 +42,7 @@
     "history": "^5.3.0",
     "html-react-parser": "^3.0.15",
     "i18next": "^23.7.11",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.48",
     "react": "^18.2.0",
@@ -50,6 +53,7 @@
     "react-highlight-words": "^0.20.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-number-format": "^5.1.4",
