--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "html-react-parser": "^3.0.15",
     "i18next": "^23.7.11",
     "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.81.1",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.48",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
