--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-select": "^5.7.2",
     "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-time-picker": "^7.0.0",
     "react-tooltip": "^5.11.1",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.4",
