--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.4",
     "twin.macro": "^3.4.0",
+    "universal-cookie": "^7.2.0",
     "xlsx": "^0.18.5",
     "yup": "^1.1.1"
   },
